--- a/docs/source/README
+++ b/docs/source/README
@@ -1,5 +1,5 @@
-Run `sphinx-apidoc -o . ../../oktaauth-py3' in this directory.
+Run `sphinx-apidoc -o . ../../oktaauthpy3' in this directory.
 
-This will generate `modules.rst' and `oktaauth-py3.rst'.
+This will generate `modules.rst' and `oktaauthpy3.rst'.
 
 Then include `modules.rst' in your `index.rst' file.
